--- a/client/src/Components/SignUp/SignIn.css
+++ b/client/src/Components/SignUp/SignIn.css
@@ -1,3 +1,22 @@
-.wrongInput {
-  background-color: brown;
+.x
+{
+	margin-left: 5vw;
+	margin-bottom: 3vw;
+}
+
+.head
+{
+	margin-left: 5vw;
+}
+
+.all
+{
+	padding-top: 2vw;
+	margin-top:5vw;
+
+}
+
+.headr
+{
+	margin-left: 4vw;
 }
